--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -21,7 +21,53 @@
             <td><%= link_to 'Edit', edit_book_path(@book), class: "btn btn-sm btn-success" %></td>
             <td><%= link_to 'Destroy', book_path(@book), method: :delete, data: { confirm: '本当に消しますか？' }, class: "btn btn-sm btn-danger"%></td>
           <% end %>
+          <td>
+            <% if @book.favorited_by?(current_user)%>
+              <%=link_to book_favorites_path(@book),method: :delete do %>
+              ♥<%=@book.favorites.count %>
+              <% end %>
+            <% else %>
+              <%=link_to book_favorites_path(@book),method: :post do %>
+              ♡<%=@book.favorites.count %>
+              <% end %>
+            <% end %>
+          </td>
+          <td>コメント数:<%=@book.post_comments.count%></td>
         </tr>
+      </table>
+      <table clss="table">
+        <tr>
+          <th></th>
+          <th></th>
+          <th></th>
+        </tr>
+        <tr>
+          <td>
+            <% @book.post_comments.each do |post_comment| %>
+              <%=link_to (post_comment.user) do %>
+              <%= image_tag post_comment.user.get_profile_image, size:"80x80" %><br>
+              <%=post_comment.user.name%>
+              <% end %>
+          </td>
+          <td>
+            <%=post_comment.comment %>
+          </td>
+          <td>
+            <% if post_comment.user==current_user %>
+              <%= link_to 'destroy',book_post_comment_path(post_comment),method: :delete,class: "btn btn-sm btn-danger"%>
+            <% end %>
+          </td>
+        </tr>
+        <% end %>
+      </table>
+      <%=form_with model: [@book,@post_comment] do |f| %>
+      <table class= "table">
+        <!--コメント欄-->
+        <thead>
+            <%=f.text_area :comment ,rows: '5' %><br>
+            <%=f.submit '送信' %>
+          <% end %>
+        </thead>
       </table>
     </div>
   </div>
