--- a/app/views/users/_index.html.erb
+++ b/app/views/users/_index.html.erb
@@ -11,7 +11,19 @@
       <tr>
         <td><%= image_tag user.get_profile_image, size: '50x50' %></td>
         <td><%= user.name %></td>
+        <td>
+          <% if user ==current_user %>
+            いね
+          <% else %>
+            <% if user.is_followed_by?(current_user) %>
+              <%= link_to 'フォロー解除する', user_relationships_path(user),method: :delete %>
+            <% else %>
+              <%= link_to 'フォローする', user_relationships_path(user),method: :post %>
+            <% end %>
+          <% end %>
+        </td>
         <td><%= link_to 'Show', user %></td>
+        
       </tr>
     <% end %>
   </tbody>
