応用課題５提出

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,6 +11,7 @@
   </head>
   <body>
     <%= render 'layouts/header' %>
+    <div class="mx-auto"><div><%= render 'searches/search' %></div></div>
       <main>
         <p id="notice"><%= notice %></p>
       </main>
