--- a/app/views/searches/search.html.erb
+++ b/app/views/searches/search.html.erb
@@ -31,7 +31,9 @@
     <tbody>
       <% @books.each do |book| %>
         <tr>
-          <td></td>
+          <td><%= link_to(book.user) do %>
+          <%= image_tag book.user.get_profile_image, size:'50x50' %>
+          <% end %></td>
           <td><%=link_to book_path(book) do %>
               <%=book.title %>
               <% end %>
