--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -21,16 +21,8 @@
             <td><%= link_to 'Edit', edit_book_path(@book), class: "btn btn-sm btn-success" %></td>
             <td><%= link_to 'Destroy', book_path(@book), method: :delete, data: { confirm: '本当に消しますか？' }, class: "btn btn-sm btn-danger"%></td>
           <% end %>
-          <td>
-            <% if @book.favorited_by?(current_user)%>
-              <%=link_to book_favorites_path(@book),method: :delete do %>
-              ♥<%=@book.favorites.count %>
-              <% end %>
-            <% else %>
-              <%=link_to book_favorites_path(@book),method: :post do %>
-              ♡<%=@book.favorites.count %>
-              <% end %>
-            <% end %>
+          <td id ="favorite_buttons_<%= @book.id %>">
+            <%=render "favorites/favorites",book: @book %>
           </td>
           <td>コメント数:<%=@book.post_comments.count%></td>
         </tr>
