--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -52,11 +52,10 @@
         </tr>
         <% end %>
       </table>
-        
-        <%= form_with(model:[@book,@post_comment], local: true)do |f| %>
-          <%= f.text_area :comment,rows:"5",placeholder: "コメントをここに",class: "w-100" %>
-          <%= f.submit '送信する',class:"btn btn-lg btn-base-1 mt-20 pull-right" %>
-        <% end %>
+        <!--コメントフォーム非同期通信-->
+        <div id="comments-area">
+          <%= render "post_comments/comment",book: @book,post_comment: @post_comment%>
+        </div>
     </div>
   </div>
 </div>
