--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -27,33 +27,15 @@
           <td>コメント数:<%=@book.post_comments.count%></td>
         </tr>
       </table>
-      <table clss="table">
+      <table class="table">
         <tr>
           <th></th>
           <th></th>
           <th></th>
         </tr>
-        <tr>
-          <td>
-            <% @book.post_comments.each do |post_comment| %>
-              <%=link_to (post_comment.user) do %>
-              <%= image_tag post_comment.user.get_profile_image, size:"80x80" %><br>
-              <%=post_comment.user.name%>
-              <% end %>
-          </td>
-          <td>
-            <%=post_comment.comment %>
-          </td>
-          <td>
-            <% if post_comment.user==current_user %>
-              <%= link_to 'destroy',book_post_comment_path(post_comment),method: :delete,class: "btn btn-sm btn-danger"%>
-            <% end %>
-          </td>
-        </tr>
-        <% end %>
       </table>
-        <!--コメントフォーム非同期通信-->
-        <div id="comments-area">
+        <div class="comments_index"><%= render "post_comments/index", book: @book %></div>
+        <div class="comments_area">
           <%= render "post_comments/comment",book: @book,post_comment: @post_comment%>
         </div>
     </div>
