--- a/app/views/post_comments/create.js.erb
+++ b/app/views/post_comments/create.js.erb
@@ -1,2 +1,5 @@
-$("#comments-area").html("<%= j(render "post_comments/comment",book: @book,post_comment: @post_comment) %>")
-                            
+<!--id="comments_areaにをrenderで指定した部分テンプレートに更新-->
+$(".comments_index").html("<%= j(render 'post_comments/index', book: @comment.book) %>");
+$(".comments_area").html("<%= j(render 'post_comments/comment', book: @comment.book, post_comment: @comment) %>");
+<!--フォームを送信したあとにフォームの値を空にします-->
+$("textarea").val('');
