--- a/app/views/books/_index.html.erb
+++ b/app/views/books/_index.html.erb
@@ -16,6 +16,7 @@
         </td>
         <td><%= link_to book.title,book %></td>
         <td><%= book.body %></td>
+        <td><%= book.created_at %></td>
         <!--非同期-->
           <td id ="book_<%= book.id%>"><%= render "favorites/favorites",book: book %></td>
         <td><%= "コメント数#{book.post_comments.count}"%></td>
