--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -3,6 +3,13 @@
     <div class='col-md-3'>
       <h2>User info</h2>
       <%= render 'info', user: @user %>
+       <tr>
+    <td>
+      <% if current_user != @user %>
+        <%=link_to "Begin Chat", chat_path(@user.id) %>
+      <% end %>
+    </td>
+  </tr>
       <h2 class="mt-3">New book</h2>
       <%= render 'books/form', book: @book %>
     </div>
