--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -21,7 +21,7 @@
             <td><%= link_to 'Edit', edit_book_path(@book), class: "btn btn-sm btn-success" %></td>
             <td><%= link_to 'Destroy', book_path(@book), method: :delete, data: { confirm: '本当に消しますか？' }, class: "btn btn-sm btn-danger"%></td>
           <% end %>
-          <td id ="favorite_buttons_<%= @book.id %>">
+          <td id ="book_<%= @book.id %>">
             <%=render "favorites/favorites",book: @book %>
           </td>
           <td>コメント数:<%=@book.post_comments.count%></td>
