--- a/app/views/post_comments/_comment.html.erb
+++ b/app/views/post_comments/_comment.html.erb
@@ -1,4 +1,4 @@
-<%= form_with(model:[book, post_comment], local:false) do |f| %>
+<%= form_with model:[book, post_comment], local:false do |f| %>
 
   <%= f.text_area :comment, rows:"5",placeholder: "コメントをここに",class: "w-100 " %>
  
