ダイレクトメッセージ機能

--- a/app/views/chats/show.html.erb
+++ b/app/views/chats/show.html.erb
@@ -31,11 +31,8 @@
               <% end %>
             </table>
 
-            <%= form_with model: @chat, remote: true do |f| %>
-              <%= f.text_field :message %>
-              <%= f.hidden_field :room_id %>
-              <%= f.submit "SEND", class:"btn btn-sm btn-success chat-btn" %>
-            <% end %>
+            <div class = "message" ><%= render "form" , chat: @chat %></div>
+            </div>
         </div>
     </div>
 </div>
