--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -12,6 +12,104 @@
     <div class='col-md-8 offset-md-1'>
       <h2>Books</h2>
       <%= render 'books/index',books: @books %>
+      <div class = "table_width">
+        <table class ="table table-bordered">
+          <thead>
+            <tr>
+              <th>今日の投稿数</th>
+              <th>前日の投稿数</th>
+              <th>前日比</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td>
+                <%= @today_book.count %>
+              </td>
+              <td>
+                <%= @yesterday_book.count %>
+              </td>
+              <td>
+                <% if @yesterday_book == 0 %>
+                  昨日の投稿はありませぬ
+                <% else %>
+                  <% @the_day_before = @today_book.count / @yesterday_book.count.to_f %>
+                  <%=(@the_day_before*100).round  %>%
+                <% end %>
+              </td>
+            </tr>
+          </tbody>
+        </table>
+        <div class = "table_width">
+          <table class ="table table-bordered">
+            <thead>
+              <tr>
+                <th>今週の投稿数</th>
+                <th>前週の投稿数</th>
+                <th>前週比</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <td><%= @this_week.count %></td>
+                <td><%=@last_week.count %></td>
+                <td><% if @last_week.count == 0%>
+                    0%
+                    <% else %>
+                    <% @the_week_before = @this_week.count / @last_week.count.to_f %>
+                    <%=(@the_week_before*100) %>%
+                    <% end %>
+                </td>
+              </tr>
+            </tbody>
+          </table>
+          <div class ="table_width">
+            7日分の投稿数
+            <table class = "table table-bordered">
+              <thead>
+                <tr>
+                  <td>6日前</td>
+                  <td>5日前</td>
+                  <td>4日前</td>
+                  <td>3日前</td>
+                  <td>2日前</td>
+                  <td>1日前</td>
+                  <td>今日</td>
+                </tr>
+              </thead>
+              <tbody>
+                <tr>
+                  <td><%= @yesterday6.count %></td>
+                  <td><%= @yesterday5.count %></td>
+                  <td><%= @yesterday4.count %></td>
+                  <td><%= @yesterday3.count %></td>
+                  <td><%= @yesterday2.count %></td>
+                  <td><%= @yesterday_book.count %></td>
+                  <td><%= @today_book.count %></td>
+                </tr>
+              </tbody>
+            </table>
+            <canvas id="myChart" width="300" height="100"> </canvas>
+
+    <script> 
+    var ctx = document.getElementById("myChart").getContext('2d');
+    var myChart = new Chart(ctx, {
+        type: 'line',                      
+        data: {
+            labels: ['6日前', '5日前', '4日前', '3日前', '2日前', '1日前', '今日'],
+            datasets: [{
+                label: "投稿数",
+                data: [<%= @books.created_yesterday6.count %>, <%= @books.created_yesterday5.count %>, <%= @books.created_yesterday4.count %>, <%= @books.created_yesterday3.count %>, <%= @books.created_yesterday2.count %>, <%= @yesterday_book.count %>, <%= @today_book.count%>],
+                backgroundColor: 'rgba(255, 80, 120, 1.0)',
+                borderColor: 'rgba(255, 80, 120, 1.0)',
+                fill: false
+            }]
+        },
+    });
+</script>
+          </div>
+        </div>
+      </div>
     </div>
   </div>
 </div>
