--- a/app/views/groups/index.html.erb
+++ b/app/views/groups/index.html.erb
@@ -3,22 +3,28 @@
         <div class="col-md-3">
            <%= render "users/info",user: @user %>
         </div>
-        <div class="col-md-8 offset-md-1">
-            <table class ="table">
+        <div class="col-md-8 offset-md-1 ">
+            <h1>Groups</h1>
+            <table class ="table w-100%">
                 <thead>
                     <th></th>
                     <th>グループ名</th>
                     <th>紹介文</th>
-                    <th></th>
+                    <th>メンバー数</th>
                 </thead>
-            <% @group_lists.each do |group_list| %>
+            <% @group_lists.each do |group| %>
                 <tr>
-                    <td><%= image_tag group_list.get_group_image,size: '50x50' %></td>
-                    <td><%=group_list.name%></td>
-                    <td><%=group_list.introduction %></td>
-                    <% if group_list.owner_id == current_user.id %>
-                        <td><%= link_to "Edit",edit_group_path(group_list),class: "btn btn-success"%></td>
-                    <% end %>
+                    <td><%= image_tag group.get_group_image,size: '50x50' %></td>
+                    <td><%= link_to group_path(group) do %>
+                        <%=group.name %>
+                        <% end %></td>
+                    <td><%=group.introduction %></td>
+                    <td>
+                        <%= group.users.count %>
+                    </td>
+                        <% if group.owner_id == current_user.id %>
+                    <td><%= link_to "Edit",edit_group_path(group),class: "btn btn-success"%></td>
+                        <% end %>
                 </tr>
                 
             <% end %>
