--- a/app/views/groups/show.html.erb
+++ b/app/views/groups/show.html.erb
@@ -7,12 +7,33 @@
                 <h1>Group Detail</h1>
             <table class ="table">
                 <tr>
-                    <th><%= image_tag @group.get_group_image,size: '50x50'  %></th>
-                    <th><%= @group.name %></th>
-                    <th><%= @group.introduction %></th>
+                    <th></th>
+                    <th>グループ名</th>
+                    <th>紹介文</th>
+                    <th>メンバー</th>
+                    <th></th>
+                    <th></th>
+                    <th></th>
+                </tr>
+                <tr>
+                    <td><%= image_tag @group.get_group_image,size: '50x50'  %></td>
+                    <td><%= @group.name %></td>
+                    <td><%= @group.introduction %></td>
+                    <td>
+                        <% @membars.each do |membar| %>
+                        <%=membar.name %><br>
+                        <% end %>
+                    </td>
                     <% if @group.owner_id==current_user.id %>
-                        <th><%= link_to "Edit",edit_group_path(@group),class: "btn btn-success"%></th>
+                        <td><%= link_to "Edit",edit_group_path(@group),class: "btn btn-success"%></td>
+                        <td><%= link_to "Notice an Event",new_group_message_path(@group),class: "btn btn-primary" %></td>
+                            <% elsif @group.users.include?(current_user) %>
+                        <td><%=link_to 'Leave this group',group_path(@group),method: :delete, class: "btn btn-danger" %>
+                            <% else %>
+                        
+                        <td><%= link_to "Join this group",group_join_path(@group),class: "btn btn-success"%></td>
                     <% end %>
+                    
                 </tr>
             </table>
         </div>
