--- a/app/views/searches/search.html.erb
+++ b/app/views/searches/search.html.erb
@@ -11,13 +11,19 @@
     <tbody>
       <% @users.each do |user| %>
         <tr>
-          <td><%= image_tag user.get_profile_image,size:'100x100' %></td>
-          <td><%= link_to user_path(user) do %>
-              <%=user.name%>
-              <% end %></td>
-          <td><%= link_to user_path(user) do %>
-              <%= user.introduction %>
-              <% end %></td>
+          <td>
+            <%= image_tag user.get_profile_image,size:'100x100' %>
+          </td>
+          <td>
+            <%= link_to user_path(user) do %>
+            <%=user.name%>
+            <% end %>
+          </td>
+          <td>
+            <%= link_to user_path(user) do %>
+            <%= user.introduction %>
+            <% end %>
+          </td>
         </tr>
       <% end %>
     </tbody>
