--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -2,6 +2,7 @@
   <div class="row">
     <div class="col-md-3">
       <h2>User info</h2>
+      
       <%= render 'info', user: @user,local: true %>
       
       <h2 class="mt-3">New book</h2>
@@ -9,8 +10,10 @@
     </div>
     
     <div class="col-md-8 offset-md-1">
-      <%= link_to "グループを作成する",new_group_path %>
+      
       <h2>Users</h2>
+      <%= link_to "グループを作成する",new_group_path %>
+      |<%= link_to "グループ一覧",groups_path %>
       <%= render 'index',users: @users %>
     </div>
   </div>
